Inseri divs para representação no layout

--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
@@ -26,6 +26,23 @@
         <button class="btn_right">Saiba mais</button>
     </div>
 
+    <div class="boxes">
+        <div class="boxes_item"></div>
+        <div class="boxes_item"></div>
+        <div class="boxes_item"></div>
+    </div>
+    <br><br>
+
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam repudiandae eaque nulla itaque omnis, sapiente
+        culpa dicta? Enim vero incidunt repellendus autem fuga dolor labore maiores reprehenderit quidem explicabo?</p>
+
 </body>
 
 </html>
