Arrumando semântica e tirando posicionamento absoluto

--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
@@ -13,35 +13,55 @@
 </head>
 
 <body>
-    <div class="navbar"></div>
-    <div class="div_img_home">
-        <img class="img_home" src="img/test1.jpg" alt="">
-    </div>
-    <div class="img_home_text">
-        <h1>Somos uma empresa <br> inovadora que busca soluções <br> tecnológicas para escritórios. </h1>
-    </div>
 
-    <div class="div_buttons">
-        <button class="btn_left">Entre em contato</button>
-        <button class="btn_right">Saiba mais</button>
-    </div>
+    <section>
+        <header>
+            <div class="bg-container">
+                <div class="slogan">
+                    <div class="img_home_text">
+                        <h1>Somos uma empresa <br> inovadora que busca soluções <br> tecnológicas para escritórios.
+                        </h1>
+                    </div>
+                    <div class="div_buttons">
+                        <button class="btn_left">Entre em contato</button>
+                        <button class="btn_right">Saiba mais</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </section>
 
-    <div class="boxes">
-        <div class="boxes_item"></div>
-        <div class="boxes_item"></div>
-        <div class="boxes_item"></div>
-    </div>
-    <br><br>
+    <main>
+        <div class="navbar"></div>
 
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
-    
+        <section>
+            <div class="boxes">
+                <div class="boxes_item"></div>
+                <div class="boxes_item"></div>
+                <div class="boxes_item"></div>
+            </div>
+        </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam repudiandae eaque nulla itaque omnis, sapiente
-        culpa dicta? Enim vero incidunt repellendus autem fuga dolor labore maiores reprehenderit quidem explicabo?</p>
+        <!-- 
+
+        <br><br>
+
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam repudiandae eaque nulla itaque omnis,
+            sapiente
+            culpa dicta? Enim vero incidunt repellendus autem fuga dolor labore maiores reprehenderit quidem explicabo?
+        </p>
+  -->
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 
