finalizando modificações na home

--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
@@ -34,35 +34,42 @@
     <main>
         <div class="navbar"></div>
 
-        <section>
-            <div class="boxes">
-                <div class="boxes_item"></div>
-                <div class="boxes_item"></div>
-                <div class="boxes_item"></div>
+
+        <div class="content">
+            <div class="absolute-orientation">
+                <section class="box-container">
+                    <div class="boxes">
+                        <div class="boxes_item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="boxes_item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="boxes_item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!--O site inteiro vai ficar dentro dessa div-->
             </div>
-        </section>
-
-        <!-- 
-
-        <br><br>
-
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam repudiandae eaque nulla itaque omnis,
-            sapiente
-            culpa dicta? Enim vero incidunt repellendus autem fuga dolor labore maiores reprehenderit quidem explicabo?
-        </p>
-  -->
+        </div>
     </main>
-    <footer>
-
-    </footer>
-
 </body>
 
 </html>
