--- a/Sprint 2/Site Institucional/Simulador/Simulador-financeiro.html
+++ b/Sprint 2/Site Institucional/Simulador/Simulador-financeiro.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Simulador.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Simulador Ferbgam</title>
 </head>
 
 <body>
     <header class="header">
-        <img class="img_relax" src="Imagem1.png">
+        <img class="img_relax" src="img/logo-relax.png">
         <p> Simule seu investimento na <b class="b_ferbgam">FERBGAM</b></p>
     </header>
     <section class="sec_inputs">
-        Qual o nome da sua empresa ? <input placeholder="Nome da empresa" autofocus> Quantos metros quadrados ?<input placeholder="quantidade de M²"> Quantos funcionarios tem sua empresa ?<input placeholder="Quntidade de funcionarios"> Qual a média salarial
-        ?
+        Qual o nome da sua empresa ?
+        <input placeholder="Nome da empresa" autofocus> Quantos metros quadrados ?
+        <input placeholder="quantidade de M²"> Quantos funcionarios tem sua empresa ?
+        <input placeholder="Quntidade de funcionarios"> Qual a média salarial?
         <input placeholder="Média salarial">
     </section>
     <div class="orcamento">Orçamento</div>
