prototipo do simulador financeiro

--- a/Sprint 2/Site Institucional/Simulador/Simulador-financeiro.html
+++ b/Sprint 2/Site Institucional/Simulador/Simulador-financeiro.html
@@ -18,7 +18,7 @@
         Qual o nome da sua empresa ?
         <input placeholder="Nome da empresa" autofocus> Quantos metros quadrados ?
         <input placeholder="quantidade de M²"> Quantos funcionarios tem sua empresa ?
-        <input placeholder="Quntidade de funcionarios"> Qual a média salarial?
+        <input placeholder="Quantidade de funcionarios"> Qual a média salarial?
         <input placeholder="Média salarial">
     </section>
     <div class="orcamento">Orçamento</div>
