Alterando o NavBar e melhorando a responsividade

--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
@@ -18,13 +18,13 @@
         <header>
             <div class="bg-container">
                 <div class="slogan">
-                    <div class="img_home_text">
+                    <div class="img-home-text">
                         <h1>Somos uma empresa <br> inovadora que busca soluções <br> tecnológicas para escritórios.
                         </h1>
                     </div>
-                    <div class="div_buttons">
-                        <button class="btn_left">Entre em contato</button>
-                        <button class="btn_right">Saiba mais</button>
+                    <div class="div-buttons">
+                        <button class="btn-left">Entre em contato</button>
+                        <button class="btn-right">Saiba mais</button>
                     </div>
                 </div>
             </div>
@@ -32,14 +32,24 @@
     </section>
 
     <main>
-        <div class="navbar"></div>
+        <div class="navbar">
+            <div class="logo-img"></div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Sobre nós</a></li>
+                    <li><a href="">Nossos serviços</a></li>
+                    <li><a href="">Entre em contato</a></li>
+                </ul>
+            </div>
+        </div>
 
 
         <div class="content">
             <div class="absolute-orientation">
                 <section class="box-container">
                     <div class="boxes">
-                        <div class="boxes_item">
+                        <div class="boxes-item">
                             <div class="box-icon">
                                 Algum ícone
                             </div>
@@ -47,7 +57,7 @@
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="boxes_item">
+                        <div class="boxes-item">
                             <div class="box-icon">
                                 Algum ícone
                             </div>
@@ -55,7 +65,7 @@
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="boxes_item">
+                        <div class="boxes-item">
                             <div class="box-icon">
                                 Algum ícone
                             </div>
