Alterando a opacidade do navbar

--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/index.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
 </head>
 
 <body>
-
     <section>
         <header>
             <div class="bg-container">
@@ -32,7 +32,7 @@
     </section>
 
     <main>
-        <div class="navbar">
+        <div class="navbar" id="id-navbar">
             <div class="logo-img"></div>
             <div class="nav-menu">
                 <ul>
