--- a/Sprint 2/Site Institucional/Simulador/index - Copia.html
+++ b/Sprint 2/Site Institucional/Simulador/index - Copia.html
@@ -21,7 +21,7 @@
                 <br>
                 <h3 class="subtitulo-simulador">Simule seu investimento com a <b>FERBGAM</b></h3>
             </div>
-            <form action="" class="form-section-simulador">
+            <form action="javascript:void(0)" onsubmit="calculate()" class="form-section-simulador">
                 <label> Qual o nome da sua empresa?</label>
                 <br>
                 <input id="in_name" placeholder="Nome da empresa" autofocus>
@@ -45,17 +45,15 @@
                     <option value="22">Medium</option>
                     <option value="33">Premium</option>
                 </select><br>
-                <button onclick="calculate()" class="btn-simulador">Análisar</button>
+                <input type="submit" name="Analisar" class="btn-simulador" />
 
             </form>
             <div id="div_javascript">
                 Com a RelaxMachine você irá economizar uma média de <span id="result_eco"></span>, aumentando a produtividade da sua empresa em 33% por um preço de <span id="result_price">
 
-</span>
+                </span>
             </div>
         </div>
 
     </section>
-</body>
-
-</html>
+    <script src='JS/main.js'></script>
