--- a/Sprint 2/Site Institucional/Simulador/index - Copia.html
+++ b/Sprint 2/Site Institucional/Simulador/index - Copia.html
@@ -49,7 +49,8 @@
 
             </form>
             <div id="div_javascript">
-                Com a RelaxMachine você irá economizar uma média de <span id="result_eco"></span>, aumentando a produtividade da sua empresa em 33% por um preço de <span id="result_price">
+                Com a RelaxMachine a sua empresa <span id="result_name">
+                </span> irá economizar uma média de R$<span id="result_eco"></span>, aumentando a produtividade da sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
 
                 </span>
             </div>
