--- a/Sprint 2/Site Institucional/Simulador/index.html
+++ b/Sprint 2/Site Institucional/Simulador/index.html
@@ -7,7 +7,7 @@
     <title>Simulador Financeiro</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' media='screen' href='css/estilo.css'>
-    <script src='main.js'></script>
+    <script src='JS/main.js'></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -21,27 +21,77 @@
                 <br>
                 <h3 class="subtitulo-simulador">Simule seu investimento com a <b>FERBGAM</b></h3>
             </div>
-            <form action="" class="form-section-simulador">
+            <form action="javascript:void(0)" onsubmit="calculate()" class="form-section-simulador">
                 <label> Qual o nome da sua empresa?</label>
                 <br>
-                <input placeholder="Nome da empresa" autofocus>
+                <input id="in_name" placeholder="Nome da empresa" class="input-form" autofocus>
                 <br>
                 <label>Quantos funcionarios tem sua empresa?</label>
                 <br>
-                <input placeholder="Quantidade de funcionarios">
+                <input id="in_employ" class="input-form" placeholder="Quantidade de funcionarios">
+                <br>
+                <label>Qual a média de absenteísmo em sua empresa?</label>
+                <br>
+                <input id="in_absenteeism" class="input-form" placeholder="Média de absenteísmo">
                 <br>
                 <label>Qual a média salarial?</label>
                 <br>
-                <input placeholder="Média salarial">
+                <input id="in_payment" class="input-form" placeholder="Média salarial">
                 <br>
                 <label>Quantos metros quadrados tem o ambiente?</label>
                 <br>
-                <input placeholder="Quantidade de m²">
+                <input id="in_meters" class="input-form" placeholder="Quantidade de m²">
                 <br>
-                <button onclick="" class="btn-simulador">Análisar</button>
-            </form>
-        </div>
-    </section>
-</body>
+                <label>Selecione qual pacote deseja simular </label>
+                <br>
+                <select name="Selecione uma pack" id="se_pack">
+                    <option class="input-form" value="selecione">Selecione uma opção</option>
+                    <option class="input-form" value="11">Basic</option>
+                    <option class="input-form" value="22">Medium</option>
+                    <option class="input-form" value="33">Premium</option>
+                </select><br>
+                <section class="box-container">
+                    <div class="boxes">
+                        <div class="boxes-item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <h3>Basic</h3>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="boxes-item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <h3>Medium</h3>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="boxes-item">
+                            <div class="box-icon">
+                                Algum ícone
+                            </div>
+                            <h3>Premium</h3>
+                            <div class="box-text">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <input type="submit" name="Analisar" class="btn-simulador" />
 
-</html>
+            </form>
+            <div id="div_javascript" class="div_visualizar">
+                Com a RelaxMachine a sua empresa <span id="result_name">
+                </span> irá economizar uma média de R$<span id="result_eco"></span>, aumentando a produtividade da sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
+
+                </span>
+            </div>
+            <br>
+        </div>
+
+    </section>
+    <script src='JS/main.js'></script>
