--- a/Sprint 2/Site Institucional/Simulador/index.html
+++ b/Sprint 2/Site Institucional/Simulador/index.html
@@ -44,7 +44,7 @@
                 <br>
                 <label>Selecione qual pacote deseja simular </label>
                 <br>
-                <select name="Selecione uma pack" id="se_pack">
+                <select name="Selecione um pack" id="se_pack">
                     <option class="input-form" value="selecione">Selecione uma opção</option>
                     <option class="input-form" value="11">Basic</option>
                     <option class="input-form" value="22">Medium</option>
@@ -54,7 +54,7 @@
                     <div class="boxes">
                         <div class="boxes-item">
                             <div class="box-icon">
-                                Algum ícone
+                                <img src="img/labeled.png">
                             </div>
                             <h3>Basic</h3>
                             <div class="box-text">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="boxes-item">
                             <div class="box-icon">
-                                Algum ícone
+                                <img src="img/favorite.png">
                             </div>
                             <h3>Medium</h3>
                             <div class="box-text">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="boxes-item">
                             <div class="box-icon">
-                                Algum ícone
+                                <img src="img/star-rating.png">
                             </div>
                             <h3>Premium</h3>
                             <div class="box-text">
