--- a/Sprint 2/Site Institucional/Simulador/index.html
+++ b/Sprint 2/Site Institucional/Simulador/index.html
@@ -54,7 +54,7 @@
                     <div class="boxes">
                         <div class="boxes-item">
                             <div class="box-icon">
-                                <img src="img/labeled.png">
+                                <img src="img/Basic.png">
                             </div>
                             <h3>Basic</h3>
                             <div class="box-text">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="boxes-item">
                             <div class="box-icon">
-                                <img src="img/favorite.png">
+                                <img src="img/Medium.png">
                             </div>
                             <h3>Medium</h3>
                             <div class="box-text">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="boxes-item">
                             <div class="box-icon">
-                                <img src="img/star-rating.png">
+                                <img src="img/Premium.png">
                             </div>
                             <h3>Premium</h3>
                             <div class="box-text">
