--- a/Sprint 2/Site Institucional/Simulador/index.html
+++ b/Sprint 2/Site Institucional/Simulador/index.html
@@ -85,8 +85,8 @@
 
             </form>
             <div id="div_javascript" class="div_visualizar">
-                Com a RelaxMachine a sua empresa <span id="result_name">
-                </span> irá economizar uma média de R$<span id="result_eco"></span>, aumentando a produtividade da sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
+                Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span id="result_absent"></span>% e com ela a sua empresa irá economizar uma média de R$<span id="result_eco"></span>, aumentando a produtividade da sua empresa
+                em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
 
                 </span>
             </div>
