Atualização da página sobre nós e organização dos arquivos

--- a/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Simulador Financeiro</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' media='screen' href='css/estilo.css'>
-    <script src='JS/main.js'></script>
+    <link rel='stylesheet' media='screen' href='css/style.css'>
+    <script src='js/main.js'></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -94,4 +94,4 @@
         </div>
 
     </section>
-    <script src='JS/main.js'></script>
+    <script src='js/main.js'></script>
