--- a/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
@@ -58,7 +58,7 @@
                             </div>
                             <h3>Basic</h3>
                             <div class="box-text">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                <p>Inclui o monitoramento de Temperatura.</p>
                             </div>
                         </div>
                         <div class="boxes-item">
@@ -67,7 +67,7 @@
                             </div>
                             <h3>Medium</h3>
                             <div class="box-text">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                <p>Inclui o monitoramento de Temperatura e Umidade.</p>
                             </div>
                         </div>
                         <div class="boxes-item">
@@ -76,7 +76,7 @@
                             </div>
                             <h3>Premium</h3>
                             <div class="box-text">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                <p>Inclui o monitoramento de Temperatura, Umidade e Luminosidade</p>
                             </div>
                         </div>
                     </div>
