--- a/Sprint 2/Site Institucional/Site Institucional - About Us/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional - About Us/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <h1>Sobre Nós</h1>
             <hr>
-            <div class="texto">
+            <div class="text">
                 <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
             </div>
         </div>
