--- a/Sprint 2/Site Institucional/Site Institucional - About Us/index Backup.html
+++ b/Sprint 2/Site Institucional/Site Institucional - About Us/index Backup.html
@@ -18,24 +18,29 @@
             <div class="text">
                 <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
             </div>
-            <section id="itens">
-                <div class="box">
-                    <img src="">
-                    <h3>teste</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto unde reprehenderit.</p>
+            <div class="box">
+                <div class="container">
+
+                    <div class="box-item">
+                        <img src="img/goal.png">
+                        <h3>Missão</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="box-item">
+                        <img src="img/goal (1).png">
+                        <h3>Visão</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="box-item">
+                        <img src="img/learning.png">
+                        <h3>Valores</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+
                 </div>
-                <div class="box-item">
-                    <img src="">
-                    <h3>teste</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto unde reprehenderit.</p>
-                </div>
-                <div class="box">
-                    <img src="">
-                    <h3>teste</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto unde reprehenderit.</p>
-                </div>
-            </section>
+            </div>
         </div>
+
     </section>
 </body>
 
