Att do contato e add dos planos

--- a/Sprint 2/Site Institucional/Site Instítucional - Contact/Contact.html
+++ b/Sprint 2/Site Institucional/Site Instítucional - Contact/Contact.html
@@ -7,12 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Contato</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Relax Machine - Contato</title>
 </head>
 
 <body>
-    <div class="Caixa">
+   <selection>
+       <header>
+           <div class="bg-container">
+               <div class="slogan">
+                   <div class="img-home-text">
+                    <div class="Caixa">
+                        <div class="Contato">   
+                            <h1>Contato</h1>
+                            <input placeholder="Seu Nome" type="text">
+                            <input placeholder="Email" type="text">
+                            <textarea placeholder="Sua mensagem" cols="50" rows="10"></textarea>
+                            <br><br>
+                            <button>Enviar →</button>
+                        </div>
+                    </div>
+                   </div>
+               </div>
+           </div>
+       </header>
+   </selection>
+
+   <main>
+       <div class="navbar" id="id-navbar">
+           <div class="logo-img"></div>
+           <div class="nav-menu">
+               <ul>
+                   <li><a href="">Home</a></li>
+                   <li><a href="">Sobre nós</a></li>
+                   <li><a href="">Nossos serviços</a></li>
+                   <li><a href="">Entre em contato</a></li>
+               </ul>
+           </div>
+       </div>
+   </main>
+
+
+
+    <!-- <div class="Caixa">
         <div class="Contato">   
             <h1>Contato</h1>
             <input placeholder="Seu Nome" type="text">
@@ -21,7 +58,7 @@
             <br><br>
             <button>Enviar →</button>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
