--- a/Sprint 2/Site Institucional/Site Instítucional - Contact/Contact.html
+++ b/Sprint 2/Site Institucional/Site Instítucional - Contact/Contact.html
@@ -47,6 +47,11 @@
        </div>
    </main>
 
+   <div class="footer">
+       <div class="container">
+       </div>
+   </div>
+
 
 
     <!-- <div class="Caixa">
