--- a/Sprint 2/Site Institucional/Site Institucional - Team-Page/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional - Team-Page/index.html
@@ -29,8 +29,7 @@
                                 <div class="pink-overlay">
                                     <h1>Abner</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                             </div>
                         </div>
                     </div>
@@ -41,8 +40,7 @@
                                 <div class="pink-overlay">
                                     <h1>Fernando</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="img/Fernando.jpg">
                             </div>
                         </div>
                     </div>
@@ -52,8 +50,7 @@
                                 <div class="pink-overlay">
                                     <h1>Giovanna</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                             </div>
                         </div>
                     </div>
@@ -67,8 +64,7 @@
                                 <div class="pink-overlay">
                                     <h1>Gustavo Manocchio</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                             </div>
                         </div>
                     </div>
@@ -78,8 +74,7 @@
                                 <div class="pink-overlay">
                                     <h1>Jhonatan</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                             </div>
                         </div>
                     </div>
@@ -90,8 +85,7 @@
                                 <div class="pink-overlay">
                                     <h1>Leonardo</h1>
                                 </div>
-                                <img
-                                    src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                             </div>
                         </div>
                     </div>
