--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -17,14 +17,16 @@
     <section>
         <header>
             <div class="bg-container">
-                <div class="slogan">
-                    <div class="img-home-text">
-                        <h1>Somos uma empresa <br> inovadora que busca soluções <br> tecnológicas para escritórios.
-                        </h1>
-                    </div>
-                    <div class="div-buttons">
-                        <button class="btn-left">Entre em contato</button>
-                        <button class="btn-right">Saiba mais</button>
+                <div class="black-layer">
+                    <div class="slogan">
+                        <div class="img-home-text">
+                            <h1>Somos uma empresa <br> inovadora que busca soluções <br> tecnológicas para escritórios.
+                            </h1>
+                        </div>
+                        <div class="div-buttons">
+                            <button class="btn-left">Entre em contato</button>
+                            <button class="btn-right">Saiba mais</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -52,7 +54,8 @@
                     <h1>Sobre Nós</h1>
                     <hr>
                     <div class="text">
-                        <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
+                        <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para
+                            aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
                     </div>
                     <div class="box">
                         <div class="container">
@@ -92,7 +95,8 @@
                                             <h3>Abner Lucas</h3>
                                             <p>Analista Desenvolvedor Back-end</p>
                                         </div>
-                                        <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img
+                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +119,8 @@
                                             <h3>Giovanna Melo</h3>
                                             <p>Desenvolvedora Front-end</p>
                                         </div>
-                                        <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img
+                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +135,8 @@
                                             <h3>Gustavo Manocchio</h3>
                                             <p>Desenvolvedor Full Stack</p>
                                         </div>
-                                        <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img
+                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +147,8 @@
                                             <h3>Jhonatan Harissa</h3>
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
-                                        <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img
+                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -153,7 +160,8 @@
                                             <h3>Leonardo Ianotta</h3>
                                             <p>Estagiário</p>
                                         </div>
-                                        <img src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img
+                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -235,9 +243,11 @@
 
                     </form>
                     <div id="div_javascript" class="div_visualizar">
-                        Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span id="result_absent"></span>% e com ela a sua empresa irá economizar uma média de R$<span id="result_eco"></span>, aumentando a produtividade da
+                        Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span
+                            id="result_absent"></span>% e com ela a sua empresa irá economizar uma média de R$<span
+                            id="result_eco"></span>, aumentando a produtividade da
                         sua empresa em <span id="result_porcent"></span>% por um preço de R$<span id="result_price">
-        
+
                         </span>
                     </div>
                     <br>
