Mudando o scroll behavior

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -16,7 +16,7 @@
 <body>
     <section>
         <header>
-            <div class="bg-container">
+            <div id="Home" class="bg-container">
                 <div class="black-layer">
                     <div class="slogan">
                         <div class="img-home-text">
