--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -51,8 +51,11 @@
         <div class="content">
             <section id="SobreNos" class="section-sobreNos">
                 <div class="container">
-                    <h1>Sobre Nós</h1>
-                    <hr>
+                    <div class="general-title">
+                        <h1>Sobre Nós</h1>
+                        <hr class="pink-stroke" />
+                    </div>
+
                     <div class="text">
                         <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para
                             aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
@@ -83,8 +86,11 @@
             </section>
             <section id="Equipe" class="section-equipe">
                 <div class="container">
-                    <h1>Equipe</h1>
-                    <hr>
+                    <div class="general-title">
+                        <h1>Equipe</h1>
+                        <hr class="pink-stroke" />
+                    </div>
+
                     <div class="team-holder">
 
                         <div class="group">
@@ -169,7 +175,10 @@
                     </div>
             </section>
             <section id="Servicos" class="section-servicos">
-                <h1>SERVIÇOS</h1>
+                <div class="general-title">
+                    <h1>SERVIÇOS</h1>
+                    <hr class="pink-stroke" />
+                </div>
             </section>
             <br>
             <section class="section-simulador">
