--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -191,7 +191,7 @@
                     <form action="javascript:void(0)" onsubmit="calculate()" class="form-section-simulador">
                         <label> Qual o nome da sua empresa?</label>
                         <br>
-                        <input id="in_name" placeholder="Nome da empresa" class="input-form" autofocus>
+                        <input id="in_name" placeholder="Nome da empresa" class="input-form">
                         <br>
                         <label>Quantos funcionarios tem sua empresa?</label>
                         <br>
