ajustes no site institucional

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -225,7 +225,7 @@
                                     </div>
                                     <h3>Basic</h3>
                                     <div class="box-text">
-                                        <p>Inclui o monitoramento de Temperatura.</p>
+                                        <p>Escolha o monitoramento de 1 sensor.</p>
                                     </div>
                                 </div>
                                 <div class="boxes-item">
@@ -234,7 +234,7 @@
                                     </div>
                                     <h3>Medium</h3>
                                     <div class="box-text">
-                                        <p>Inclui o monitoramento de Temperatura e Umidade.</p>
+                                        <p>Escolha o monitoramento de 2 sensores.</p>
                                     </div>
                                 </div>
                                 <div class="boxes-item">
@@ -243,7 +243,7 @@
                                     </div>
                                     <h3>Premium</h3>
                                     <div class="box-text">
-                                        <p>Inclui o monitoramento de Temperatura, Umidade e Luminosidade</p>
+                                        <p>Inclui o monitoramento com os 3 sensores.</p>
                                     </div>
                                 </div>
                             </div>
@@ -264,9 +264,13 @@
 
             </section>
             <section id="Contato" class="section-contato">
+                <div class="general-title">
+                    <h1>Contato</h1>
+                    <hr class="pink-stroke" />
+                </div>
                 <div class="Caixa">
                     <div class="Contato">
-                        <h1>Contato</h1>
+                        
                         <input placeholder="Seu Nome" type="text">
                         <input placeholder="Email" type="text">
                         <textarea placeholder="Sua mensagem" cols="50" rows="10"></textarea>
@@ -281,7 +285,7 @@
                     <h4>Desenvolvido por FERBGAM </h4>
                 </div>
                 <div class="icones">
-                    <a href=""><img src="img/github.png" alt="icone github"></a>
+                    <a href="https://github.com/BandTec/Ferbgam"><img src="img/github.png" alt="icone github"></a>
                     <a href=""><img src="img/logotipo-do-linkedin.png" alt="icone linkedin"></a>
                 </div>
             </div>
