--- a/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional - Simulator/index.html
@@ -22,34 +22,41 @@
                 <h3 class="subtitulo-simulador">Simule seu investimento com a <b>FERBGAM</b></h3>
             </div>
             <form action="javascript:void(0)" onsubmit="calculate()" class="form-section-simulador">
-                <label> Qual o nome da sua empresa?</label>
+                <div class="container-simulator">
+                    <div class="colum-simulator">
+                        <label> Qual o nome da sua empresa?</label>
+                        <br>
+                        <input id="in_name" placeholder="Nome da empresa" class="input-form">
+                        <br>
+                        <label>Quantos funcionarios tem sua empresa?</label>
+                        <br>
+                        <input id="in_employ" class="input-form" placeholder="Quantidade de funcionarios">
+                        <br>
+                        <label>Qual a média de absenteísmo em sua empresa?</label>
+                        <br>
+                        <input id="in_absenteeism" class="input-form" placeholder="Média de absenteísmo">
+                        <br>
+                    </div>
+                    <div class="colum-simulator">
+                        <label>Qual a média salarial?</label>
+                        <br>
+                        <input id="in_payment" class="input-form" placeholder="Média salarial">
+                        <br>
+                        <label>Quantos metros quadrados tem o ambiente?</label>
+                        <br>
+                        <input id="in_meters" class="input-form" placeholder="Quantidade de m²">
+                        <br>
+                        <label>Selecione qual pacote deseja simular </label>
+                        <br>
+                        <select name="Selecione um pack" id="se_pack">
+                            <option class="input-form" value="selecione">Selecione uma opção</option>
+                            <option class="input-form" value="11">Basic</option>
+                            <option class="input-form" value="22">Medium</option>
+                            <option class="input-form" value="33">Premium</option>
+                        </select>
+                    </div>
+                </div>
                 <br>
-                <input id="in_name" placeholder="Nome da empresa" class="input-form" autofocus>
-                <br>
-                <label>Quantos funcionarios tem sua empresa?</label>
-                <br>
-                <input id="in_employ" class="input-form" placeholder="Quantidade de funcionarios">
-                <br>
-                <label>Qual a média de absenteísmo em sua empresa?</label>
-                <br>
-                <input id="in_absenteeism" class="input-form" placeholder="Média de absenteísmo">
-                <br>
-                <label>Qual a média salarial?</label>
-                <br>
-                <input id="in_payment" class="input-form" placeholder="Média salarial">
-                <br>
-                <label>Quantos metros quadrados tem o ambiente?</label>
-                <br>
-                <input id="in_meters" class="input-form" placeholder="Quantidade de m²">
-                <br>
-                <label>Selecione qual pacote deseja simular </label>
-                <br>
-                <select name="Selecione um pack" id="se_pack">
-                    <option class="input-form" value="selecione">Selecione uma opção</option>
-                    <option class="input-form" value="11">Basic</option>
-                    <option class="input-form" value="22">Medium</option>
-                    <option class="input-form" value="33">Premium</option>
-                </select><br>
                 <section class="box-container">
                     <div class="boxes">
                         <div class="boxes-item">
