bortoes site institucional

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -24,8 +24,8 @@
                             </h1>
                         </div>
                         <div class="div-buttons">
-                            <button class="btn-left">Entre em contato</button>
-                            <button class="btn-right">Saiba mais</button>
+                            <a href="#Contato"><button class="btn-left">Entre em contato</button></a>
+                            <a href="#SobreNos"><button class="btn-right">Saiba mais</button></a>
                         </div>
                     </div>
                 </div>
