mudando a estrutura de pastas

--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="img/fer1branco.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="./src/css/style.css">
+    <script src="./src/js/script.js"></script>
 </head>
 
 <body>
@@ -64,17 +64,19 @@
                         <div class="container">
 
                             <div class="box-item">
-                                <img src="img/goal.png">
+                                <img src="./src/img/goal.png">
                                 <h3>Missão</h3>
-                                <p>Atender às necessidades de nossos clientes e superar as expectativas, oferecendo muito mais que produtos e serviços.</p>
+                                <p>Atender às necessidades de nossos clientes e superar as expectativas, oferecendo
+                                    muito mais que produtos e serviços.</p>
                             </div>
                             <div class="box-item">
-                                <img src="img/goal (1).png">
+                                <img src="./src/img/goal (1).png">
                                 <h3>Visão</h3>
-                                <p> Ser referência em inovação e qualidade, agregando bem-estar e conforto aos ambientes empresariais. </p>
+                                <p> Ser referência em inovação e qualidade, agregando bem-estar e conforto aos ambientes
+                                    empresariais. </p>
                             </div>
                             <div class="box-item">
-                                <img src="img/learning.png">
+                                <img src="./src/img/learning.png">
                                 <h3>Valores</h3>
                                 <p>Inovação, liderança, responsabilidade, integridade, qualidade e execelência</p>
                             </div>
@@ -114,7 +116,7 @@
                                             <h3>Fernando Marques</h3>
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
-                                        <img src="img/Fernando.jpg">
+                                        <img src="./src/img/Fernando.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -125,8 +127,7 @@
                                             <h3>Giovanna Melo</h3>
                                             <p>Desenvolvedora Front-end</p>
                                         </div>
-                                        <img
-                                            src="img/giovanna.jpeg">
+                                        <img src="./src/img/giovanna.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -141,8 +142,7 @@
                                             <h3>Gustavo Manocchio</h3>
                                             <p>Desenvolvedor Full Stack</p>
                                         </div>
-                                        <img
-                                            src="https://cutewallpaper.org/21/chris-hemsworth-wallpapers/Chris-Hemsworth-Wallpapers-HD-for-Android-APK-Download.jpg">
+                                        <img src="./src/img/manocchio.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
             <section class="section-simulador">
                 <div class="container-section-simulador">
                     <div class="div-logo-section-simulador">
-                        <img class="logo-section-simulador" src="img/logo-relax.png" alt="">
+                        <img class="logo-section-simulador" src="./src/img/logo-relax.png" alt="">
                         <br>
                         <h3 class="subtitulo-simulador">Simule seu investimento com a <b>FERBGAM</b></h3>
                     </div>
@@ -227,7 +227,7 @@
                             <div class="boxes">
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="img/Basic.png">
+                                        <img src="./src/img/Basic.png">
                                     </div>
                                     <h3>Basic</h3>
                                     <div class="box-text">
@@ -236,7 +236,7 @@
                                 </div>
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="img/Medium.png">
+                                        <img src="./src/img/Medium.png">
                                     </div>
                                     <h3>Medium</h3>
                                     <div class="box-text">
@@ -245,7 +245,7 @@
                                 </div>
                                 <div class="boxes-item">
                                     <div class="box-icon">
-                                        <img src="img/Premium.png">
+                                        <img src="./src/img/Premium.png">
                                     </div>
                                     <h3>Premium</h3>
                                     <div class="box-text">
@@ -305,11 +305,11 @@
                 </div>
                 <div class="icones">
                     <a href="https://github.com/BandTec/Ferbgam"><img src="img/github.png" alt="icone github"></a>
-                    <a href=""><img src="img/logotipo-do-linkedin.png" alt="icone linkedin"></a>
+                    <a href=""><img src="./src/img/logotipo-do-linkedin.png" alt="icone linkedin"></a>
                 </div>
             </div>
     </main>
 </body>
 
 </html>
-<script src="js/script.js"></script>
+<script src="./srcjs/script.js"></script>
